Fixed vertical align take 2

--- a/themes/marmite/assets/stylesheets/post/post.css.scss
+++ b/themes/marmite/assets/stylesheets/post/post.css.scss
@@ -15,9 +15,9 @@
 @mixin social {
   .social.buttons {
     & > a, & > div {
-      display: inline-block;
       height: 20px;
       line-height: 20px;
+      vertical-align: top;
     }
   }
 }
